# Phasor-driven

./: README.md  pyproject.toml  requirements.txt
src/: .gitignore
src/experiments_cifar10/: README.md  print_profiling_alexnet.py  print_profiling_densenet121.py  print_profiling_efficientnetb3.py  print_profiling_inceptionv3.py  print_profiling_resnet18.py  print_profiling_vgg16.py  run_pretraining_alexnet.py  run_pretraining_densenet121.py  run_pretraining_efficientnetb3.py  run_pretraining_inceptionv3.py  run_pretraining_resnet18.py  run_pretraining_vgg16.py  run_profiling_alexnet.py  run_profiling_densenet121.py  run_profiling_efficientnetb3.py  run_profiling_inceptionv3.py  run_profiling_resnet18.py  run_profiling_vgg16.py  run_training_alexnet.py  run_training_densenet121.py  run_training_efficientnetb3.py  run_training_inceptionv3.py  run_training_resnet18.py  run_training_vgg16.py
src/experiments_cifar100/: print_profiling_alexnet.py  print_profiling_densenet121.py  print_profiling_efficientnetb3.py  print_profiling_inceptionv3.py  print_profiling_resnet18.py  print_profiling_vgg16.py  run_pretraining_alexnet.py  run_pretraining_densenet121.py  run_pretraining_efficientnetb3.py  run_pretraining_inceptionv3.py  run_pretraining_resnet18.py  run_pretraining_vgg16.py  run_profiling_alexnet.py  run_profiling_densenet121.py  run_profiling_efficientnetb3.py  run_profiling_inceptionv3.py  run_profiling_resnet18.py  run_profiling_vgg16.py  run_training_alexnet.py  run_training_densenet121.py  run_training_efficientnetb3.py  run_training_inceptionv3.py  (+2 more)
(+45 files in other folders)
